# Rust-BSA-BA2-Handler

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
src/archive/: ba2_reader.rs  ba2_writer.rs  mod.rs  reader.rs  tes3_reader.rs  writer.rs
src/gui/: mod.rs  state.rs
